Add operator overloading for user-defined classes
Support user-defined operators:

```
class ...:
  def __add__(self, rhs): ...
  def __sub__(self, rhs): ...
  def __mul__(self, rhs): ...
  def __truediv__(self, rhs): ...
  def __floordiv__(self, rhs): ...
  def __pow__(self, rhs): ...
  def __mod__(self, rhs): ...
  def __lshift__(self, rhs): ...
  def __rshift__(self, rhs): ...

  def __eq__(self, rhs): ...
  def __lt__(self, rhs): ...
  def __le__(self, rhs): ...
  def __gt__(self, rhs): ...
  def __ge__(self, rhs): ...
  def __ne__(self, rhs): ...
  def __contains__(self, rhs): ...

  def __len__(self): ...
  def __getitem__(self, key): ...
  def __setitem__(self, key, value): ...
  def __call__(self, *args): ...
```